fixed image alignment

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ body {
     z-index: 10;
     padding: 30px;
     padding-top: 20px;
-    padding-bottom: 70px;
+    padding-bottom: 65px;
     line-height: 50px;
     width: 70%;
     max-width: 300px;
